--- a/css/global.css
+++ b/css/global.css
@@ -5,15 +5,13 @@
 }
 
 html {
-  width: 100vw;
+  width: 100%;
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 
 body {
-  max-width: 1440px;
-  height: 100vh;
+  width: 1440px;
   display: flex;
   flex-direction: column;
   align-items: center;
